--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NCGA</title>
+	<link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -108,7 +109,7 @@
                             <h2 class="slide__title">"We're still <span class="yellow">a family farm</span><br />but it's operated more like<br />a business."
                             </h2>
                             <div class="slide__text slide__text">
-                                <p class="slide__text-description">Bryan and Lauren Biegler</p>
+                                <p class="slide__text-description">Bryan Biegler</p>
                                 <p class="slide__text-meta">Lake Wilson, MN</p>
                             </div>
                         </div>
@@ -119,7 +120,7 @@
                             <h2 class="slide__title">"If one of our kids was<br />really into computers, they<br />might be the most valuable<br />person on our farm <span class="yellow">in 20</span><br /><span class="yellow">years from now</span>."
                             </h2>
                             <div class="slide__text slide__text">
-                                <p class="slide__text-description">Krista and Brett Swanson</p>
+                                <p class="slide__text-description">Krista Swanson</p>
                                 <p class="slide__text-meta">Oneida, IL</p>
                             </div>
                         </div>
@@ -235,11 +236,11 @@
                         <div id="slideMob4" class="slideMob">
 
                             <div class="quote">
-                                <h2>"We're still <span class="yellow">a family farm</span><br />But it's operated more like<br />a business."</h2>
+                                <h2>"We're still <span class="yellow">a family farm</span> But it's operated more like a business."</h2>
                             </div>
                             <div class="autor">
                                 <br />
-                                <p>Bryan and Lauren Biegler</p>
+                                <p>Bryan Biegler</p>
                                 <p>Lake Wilson, MN<</p>
                                 <br />
                             </div>
@@ -265,7 +266,7 @@
                             </div>
                             <div class="autor">
                                 <br />
-                                <p>Krista and Brett Swanson</p>
+                                <p>Krista Swanson</p>
                                 <p>Oneida, IL</p>
                                 <br />
                             </div>
@@ -293,7 +294,7 @@
                     <div class="overlay"></div>
                     <div id="next-section-text" class="container content__item scrollingText">
                         <div class="content__item-imgwrap scroll-text">
-                            <div class="content__item-img scroll text">
+                            <div id="scrollText" class="content__item-img scroll text">
                                 <p>
                                     Since 1980, corn farmers invested in advanced technology that enables them to grow more with less. In fact, they are doing so 45% more efficiently with every bushel grown.
                                 </p>
@@ -427,73 +428,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--<div id="circles-container" class="circles-container" style="display:none;">
-                            <div class="circlePercent">
-                                <div id="circle1" class="circle invisible">
-                                    <h1 class="ml8 circlePercent1">
-                                        <span class="letters-container">
-                                            <span class="letters letters-left">12</span>
-                                            <span class="letters bang">%</span>
-                                        </span>
-                                        <span class="circle circle-white"></span>
-                                        <span class="circle circle-dark"></span>
-                                        <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                    </h1>
-                                </div>
-                            </div>
-                            <div class="circlePercent">
-                                <div id="circle2" class="circle invisible">
-                                    <h1 class="ml8 circlePercent2">
-                                        <span class="letters-container">
-                                            <span class="letters letters-left">13</span>
-                                            <span class="letters bang">%</span>
-                                        </span>
-                                        <span class="circle circle-white"></span>
-                                        <span class="circle circle-dark"></span>
-                                        <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                    </h1>
-                                </div>
-                            </div>
-                            <div class="circlePercent">
-                                <div id="circle3" class="circle invisible">
-                                    <h1 class="ml8 circlePercent3">
-                                        <span class="letters-container">
-                                            <span class="letters letters-left">15</span>
-                                            <span class="letters bang">%</span>
-                                        </span>
-                                        <span class="circle circle-white"></span>
-                                        <span class="circle circle-dark"></span>
-                                        <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                    </h1>
-                                </div>
-                            </div>
-                            <div class="circlePercent">
-                                <div id="circle4" class="circle invisible">
-                                    <h1 class="ml8 circlePercent4">
-                                        <span class="letters-container">
-                                            <span class="letters letters-left">13</span>
-                                            <span class="letters bang">%</span>
-                                        </span>
-                                        <span class="circle circle-white"></span>
-                                        <span class="circle circle-dark"></span>
-                                        <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                    </h1>
-                                </div>
-                            </div>
-                            <div class="circlePercent">
-                                <div id="circle5" class="circle invisible">
-                                    <h1 class="ml8 circlePercent5">
-                                        <span class="letters-container">
-                                            <span class="letters letters-left">13</span>
-                                            <span class="letters bang">%</span>
-                                        </span>
-                                        <span class="circle circle-white"></span>
-                                        <span class="circle circle-dark"></span>
-                                        <span class="circle circle-container"><span class="circle circle-dark-dashed"></span></span>
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>-->
                         <p class="commitment-under">
                             Source - Field to Market: The Alliance for Sustainable Agriculture, 2016. Environmental and Socioeconomic Indicators for Measuring Outcomes of On Farm Agricultural Production in the United States (Third Edition)
                         </p>
@@ -508,7 +442,7 @@
                             <div class="col-12 col-lg-7 order-2 order-lg-1">
                                 <div id="barras" class="barras">
                                     <div class="barra">
-                                        <p>SOIL LOSS PERACRE DECREASED BY</p>
+                                        <p>SOIL LOSS PER ACRE DECREASED BY</p>
                                         <div id="barra1" class="barra-nivel" data-nivel="58%"><span id="barraText1" class="barra-text"></span></div>
                                     </div>
                                     <div class="barra">
@@ -904,7 +838,7 @@
                                         </span>
                                         <hr>
                                     </div>
-                                    <div class="per-box mt-lg-5">
+                                    <div class="per-box mt-lg-5 sub">
                                         <span class="before-percentage">
                                             on only
                                         </span>
@@ -1037,11 +971,6 @@
     <script src="https://kit.fontawesome.com/fd2ea44a13.js" crossorigin="anonymous"></script>
     <script src="jquery.matchHeight.js"></script>
     <script src="circle-progress.min.js"></script>
-    <script src="rellax.min.js"></script>
-    <script>
-        // Accepts any class name
-        var rellax = new Rellax('.rellax');
-    </script>
 
 
 
