--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NCGA</title>
+    <title>Nationals Corn Growers Association</title>
 	<link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -412,7 +412,7 @@
                                 </div>
                             </div>
                             <div class="progressbar1" data-animate="false">
-                                <p data-mh="progres-p" class="progres-p">Reducing GHG emissions by 13%</p>
+                                <p data-mh="progres-p" class="progres-p">Reducing GHG emissions by</p>
                                 <div class="circlePercent">
                                     <div id="circle5" class="circle invisible">
                                         <h1 class="ml8 circlePercent5">
