--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                         <p class="commitment-under">
-                            Source - Field to Market: The Alliance for Sustainable Agriculture, 2016. Environmental and Socioeconomic Indicators for Measuring Outcomes of On Farm Agricultural Production in the United States (Third Edition)
+                            Source -  National Corn Growers Association
                         </p>
                     </div>
                 </section>
@@ -505,7 +505,7 @@
                                     </div>
                                 </div>
                                 <p class="box-text">
-                                    Soil loss per acre decrased
+                                    Soil loss per acre decrased by
                                 </p>
                                 <span id="percent1" class="percent-box">
 
