--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                                 <div class="img-percent-box">
                                     <img class="img-fluid" src="./img/58.jpg" alt="">
                                     <p data-mh="box-p" class="box-text">
-                                        Soil loss per acre decreased
+                                        Soil loss per acre decreased by
                                     </p>
                                     <span class="percent-box">
                                         58%
