--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                                             Average Yield
                                         </span>
                                         <div id="envPercent1" class="percent" data-percent="168">
-                                            168%
+                                            168
                                         </div>
                                         <span class="under-percentage">
                                             Bushels Per Acre
@@ -872,7 +872,7 @@
                             <div class="green-numbers">
                                 <div class="number number-1">
                                     <span>90.8</span>
-                                    <p>MILLION ACRES PLANTED</p>
+                                    <p>MILION ACRES PLANTED</p>
                                     <hr>
                                 </div>
                                 <div class="number number-2">
@@ -892,12 +892,12 @@
                                 </div>
                                 <div class="number number-5">
                                     <span>$4.20</span>
-                                    <p>BILLION BUSHELS PRODUCED</p>
+                                    <p>AVERAGE PRICE PER BUSHEL</p>
                                     <hr>
                                 </div>
                                 <div class="number number-6">
                                     <span>14.2</span>
-                                    <p>MILLION ACRES PLANTED</p>
+                                    <p>BILLION BUSHELS PRODUCED</p>
                                     <hr>
                                 </div>
                                 <div class="number number-7">
@@ -932,12 +932,12 @@
                                     </div>
                                     <div class="mobnumber mobnumber-5 gallery-cell">
                                         <span>$4.20</span>
-                                        <p>BILLION BUSHELS PRODUCED</p>
+                                        <p>AVERAGE PRICE PER BUSHEL</p>
                                         <hr>
                                     </div>
                                     <div class="mobnumber mobnumber-6 gallery-cell">
                                         <span>14.2</span>
-                                        <p>MILLION ACRES PLANTED</p>
+                                        <p>BILLION BUSHELS PRODUCED</p>
                                         <hr>
                                     </div>
                                     <div class="mobnumber mobnumber-7 gallery-cell">
